--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,50 @@
-html, body{
-    margin:0 auto;
-    height: 22px;
-    margin:auto;
+html,body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 62.5%;
+}
+body{
+    color: gray;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: normal;
+    font-stretch: normal;
+    font-size: 12px;
+    line-height: 1.33;
+    font-family: sans-serif;
+}
+header{
+    margin: 0 auto;
+    padding-bottom: 10px;
+    background-color: #fff;
+    padding:25px 0 30px 0;
+    width: 1200px;
+    height: 200px;
 }
 
-body{
-    background color:brown;
+span > img{
+    float: left;
+    margin:0 auto;
+    
+}
+
+nav > ul > li{
+    display: inline;
+    width: calc(100%/6);
+    text-transform: uppercase;
+    padding: 1px 5px 1px 5px;
+    margin: 0 0 3px 0;
+}
+
+ul{
+    
+    float:right;
+    margin:0;
+    text-align:right;
+    margin:9px 0px 0px 0px;
+    list-style:none;
+    display:block;
+    width:calc(100%/3);
+    
 }
