--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,13 @@ html,body{
     box-sizing: border-box;
     font-size: 62.5%;
 }
+
 body{
     color: gray;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: normal;
-    font-stretch: normal;
+    font-style:normal;
+    font-variant:normal
+    font-weight:normal;
+    font-stretch:normal;
     font-size: 12px;
     line-height: 1.33;
     font-family: sans-serif;
@@ -47,4 +48,60 @@ ul{
     display:block;
     width:calc(100%/3);
     
+}
+homeTwo{
+    display: inline-block;
+    padding: 1px 5px 1px 5px;
+    margin: 0 0 3px 0;
+    background-color: #6c5b79;
+    padding: 0;
+    font-size: 12px;
+    width: calc(100%/4);
+    font-weight: bold;
+    width: 160px;
+    text-align: center;
+    height: 35px;
+    line-height: 35px;
+    color: #fff;
+    
+}
+.list{
+    display: inline-block;
+    text-align: left;
+    background-color: #6c5b79;
+    padding: 0;
+    font-size: 12px;
+    font-weight: bold;
+    width: 160px;
+    text-align: center;
+    height: 35px;
+    line-height: 35px;
+    color: #fff;
+    
+}
+li{
+    float:left;
+    color:ghostwhite;
+    width: calc(116%/13);
+    line-height: 20px;
+    height:30px; 
+    margin: 0 auto;
+    background-color:palevioletred;
+}
+a{
+    text-decoration: none;
+    color: white;
+}
+ss{
+    background-color:mediumpurple;
+    padding: 0;
+    font-size: 12px;
+    font-weight: bold;
+    text-transform: uppercase;
+    width: 160px;
+    display: inline-block;
+    text-align: center;
+    height: 35px;
+    line-height: 35px;
+    color:ghostwhite;
 }
