--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html,body{
 body{
     color: gray;
     font-style:normal;
-    font-variant:normal
+    font-variant:normal;
     font-weight:normal;
     font-stretch:normal;
     font-size: 12px;
@@ -35,7 +35,7 @@ nav > ul > li{
     width: calc(100%/6);
     text-transform: uppercase;
     padding: 1px 5px 1px 5px;
-    margin: 0 0 3px 0;
+    margin: 0 0 4px 0;
 }
 
 ul{
