--- a/css/style.css
+++ b/css/style.css
@@ -1,55 +1,63 @@
-html,body{
-    margin: 0;
+html, body{
+
+margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-size: 62.5%;
+    
 }
 
+
 body{
-    color: gray;
-    font-style:normal;
-    font-variant:normal;
-    font-weight:normal;
-    font-stretch:normal;
-    font-size: 12px;
-    line-height: 1.33;
+    
+    color: #818181;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: normal;
+    font-stretch: normal;
+    font-size: 11px;
+    line-height: 5em;
     font-family: sans-serif;
 }
 header{
+    
     margin: 0 auto;
     padding-bottom: 10px;
     background-color: #fff;
     padding:25px 0 30px 0;
     width: 1200px;
     height: 200px;
+    
 }
 
-span > img{
+#header_left{
     float: left;
     margin:0 auto;
     
 }
 
-nav > ul > li{
+li{
+    
     display: inline;
     width: calc(100%/6);
     text-transform: uppercase;
     padding: 1px 5px 1px 5px;
-    margin: 0 0 4px 0;
+    margin: 0 0 3px 0;
+    
 }
 
-ul{
+#one_nav{
     
-    float:right;
-    margin:0;
-    text-align:right;
-    margin:9px 0px 0px 0px;
-    list-style:none;
-    display:block;
-    width:calc(100%/3);
+    float: right;
+    margin: 0 auto;
+    text-align: right;
+    margin: 9px 0 0 0 0;
+    list-style: none;
+    display: block;
     
 }
-homeTwo{
+
+.one_li{
     display: inline-block;
     padding: 1px 5px 1px 5px;
     margin: 0 0 3px 0;
@@ -58,19 +66,24 @@ homeTwo{
     font-size: 12px;
     width: calc(100%/4);
     font-weight: bold;
-    width: 160px;
+     width: 160px;
     text-align: center;
     height: 35px;
     line-height: 35px;
     color: #fff;
     
 }
-.list{
+
+.li_one{
+    
     display: inline-block;
     text-align: left;
+    padding: 1px 5px 1px 5px;
+    margin: 0 0 3px 0;
     background-color: #6c5b79;
     padding: 0;
     font-size: 12px;
+    width: calc(100%/3);
     font-weight: bold;
     width: 160px;
     text-align: center;
@@ -79,21 +92,24 @@ homeTwo{
     color: #fff;
     
 }
-li{
-    float:left;
-    color:ghostwhite;
-    width: calc(116%/13);
-    line-height: 20px;
-    height:30px; 
+
+.two_li{
+    
+    float: left;
+    color: #F9F9F9;
+    width: calc(100%/13);
+    line-height: 30px;
     margin: 0 auto;
-    background-color:palevioletred;
+    background-color:#f42098;
 }
 a{
     text-decoration: none;
     color: white;
 }
-ss{
-    background-color:mediumpurple;
+
+input{
+    
+    background-color: #6c5b79;
     padding: 0;
     font-size: 12px;
     font-weight: bold;
@@ -103,5 +119,5 @@ ss{
     text-align: center;
     height: 35px;
     line-height: 35px;
-    color:ghostwhite;
+    color: #fff;
 }
