--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,11 @@ header{
     width: 1200px;
     height: 200px;
 }
+header:hover{
+    
+    background-color:navy;
+    transition: background 3s;
+}
 
 #header_left{
     float: left;
@@ -32,7 +37,9 @@ header{
     
 }
 #header_left:hover{
-    background-color:aqua:
+    background-color:aqua;
+    transition: background 2s;
+    border-radius: 50px 50px 10px 10px;
 }
 li{
     display: inline;
