--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,10 @@ header{
     height: 200px;
 }
 header:hover{
+/*
     
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+*/
     background-color:navy;
     transition: background 3s;
 }
@@ -49,13 +52,17 @@ li{
     margin: 0 0 3px 0;
 }
 #one_nav{
-    float: right;
+    float: left;
     margin: 0 auto;
     text-align: right;
     margin: 9px 0 0 0 0;
     list-style: none;
-    display: block;
+    display:block;
    
+}
+#one_nav:hover{
+    background-color:bisque;
+    transition: background 2s;
 }
 
 .one_li{
