--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,13 @@ body{
 }
 
 header{
-    display:inline;
+    display:block;
     margin: 0 auto;
     padding-bottom: 10px;
-    background-color: #fff;
+    background-color: darkgrey;
     padding:25px 0 30px 0;
-    width: 1200px;
-    height: 200px;
+    width: 100%;
+    height: 140px;
     
 }
 header:hover{
@@ -39,6 +39,7 @@ header:hover{
 #header_left{
     margin:0 auto;
     float:left;
+    display:inherit;
     
 }
 #header_left:hover{
@@ -49,17 +50,21 @@ header:hover{
 
 nav{
     display:block;
+    text-align: center;
     margin:0 auto;
-    float:right;
+    float:inherit;
 }
 
 li{
-    display: inline;
+    display:block;
     width: calc(100%/6);
     text-transform: uppercase;
+/*
     padding: 1px 5px 1px 5px;
     margin: 0 0 3px 0;
+*/
 }
+/*
 #one_nav{
     
     margin: 0 auto;
@@ -70,6 +75,7 @@ li{
     background-color:aqua;
    
 }
+*/
 #one_nav:hover{
     background-color:bisque;
     transition: background 2s;
@@ -134,4 +140,27 @@ input{
     color: #fff;
 }
 
+/*[if lt lE9]*/
+<script src"http://html5shiv.googlecode.com/sun/trunk/html/5.js"></sript>
 
+
+@media only screen and (min-width:600px) and (max-width:920px){
+    body{
+        width:90%;
+    }
+}
+
+@media only screen and (max-width:599px){
+    
+    body{
+        width 320px
+    }
+    pre{
+        font-size:.8em;
+        padding:.5em;
+        background:rgb(246,247,169);
+        
+        
+        
+    }
+}
