--- a/css/style.css
+++ b/css/style.css
@@ -56,29 +56,31 @@ header:hover{
     color: #F9F9F9;
     width: calc(100%/6);
     line-height: 30px;
-    display:inline;
+    display:block;
     margin: 0 auto;
     background-color:#f42098;
 }
 
 
 .firstul{
-    display:inline-block;
+    
+    display:inline;
     width:0 auto;
     margin:0 auto;
     text-transform: uppercase;
     padding:3px;
-    float:right;
+    float:left;
 
 }
+
 .firstul > a{
     
-    display:inline-block;
+    display:inline;
     width:0 auto;
     margin:0 auto;
     text-transform: uppercase;
     padding:3px;
-    float:right;
+    float:left;
     
 }
     
