nav section nesting debug
class tag is used for more than one.

--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ header:hover{
     border-radius: 50px 50px 10px 10px;
 }
 
+
 #one_nav{
     
     float:right;
@@ -62,6 +63,7 @@ header:hover{
 }
 
 
+/*
 .firstul{
     
     display:inline;
@@ -83,6 +85,28 @@ header:hover{
     float:left;
     
 }
+*/
+
+
+.firstul{
+    display:inline-block;
+    width:100%;
+    height: auto;
+    margin: auto;
+    padding: 0;
+    background-color: #f42098;
+    font-size: 15x;
+}
+.firstul > a{
+    display:inline-block;
+    margin: 5px;
+    font-size: 13px;
+    float:right;
+    padding: 0;
+    width: calc(130%/13);
+    text-align: center;
+    line-height: 2;
+    text-transform: uppercase;
     
 /*    padding:1px 55px 1px 5px*/
 
