--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,56 @@
 html, body{
+    margin: 0;
+    padding:0;
+    box-sizing:border-box;
+    font-size: 1em
+}
+
+body{
+    
+    color:red;
+    background-color: beige;
+    font-size:17px;
+    line-height: 1.55;
+    font-family: san-serif;
+}
+
+header{
+    
+    display:block;
+    margin:0 auto;
+    width:100%;
+    height: 280px;
+    
+}
+
+#logo{
+    
+    margin:0 auto;
+    float:left;
+}
+
+#one_nav{
+    display:inline-block;
+}
+
+
+
+
+
+
+
+/*
+html, body{
 
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-size: 55.5%;
+    
 }
 
 body{
+    
     color: #818181;
     font-style: normal;
     font-variant: normal;
@@ -15,9 +59,11 @@ body{
     font-size: 15px;
     line-height: 1.55;
     font-family: sans-serif;
+    
 }
 
 header{
+    
     display:block;
     margin: 0 auto;
     padding-bottom: 10px;
@@ -27,16 +73,16 @@ header{
     height: 140px;
     
 }
+
 header:hover{
-/*
     
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-*/
+
     background-color:navy;
     transition: background 3s;
 }
 
-#header_left{
+#header_left{ changed to logo
 
     margin:0 auto;
     padding:30px;
@@ -63,7 +109,7 @@ header:hover{
 }
 
 
-/*
+
 .firstul{
     
     display:inline;
@@ -85,10 +131,11 @@ header:hover{
     float:left;
     
 }
-*/
+
 
 
 .firstul{
+    
     display:inline-block;
     width:100%;
     height: auto;
@@ -96,8 +143,10 @@ header:hover{
     padding: 0;
     background-color: #f42098;
     font-size: 15x;
+    
 }
 .firstul > a{
+    
     display:inline-block;
     margin: 5px;
     font-size: 13px;
@@ -110,14 +159,6 @@ header:hover{
     
 }
     
-/*    padding:1px 55px 1px 5px*/
-
-/*
-    padding: 1px 5px 1px 5px;
-    margin: 0 0 3px 0;
-*/
-
-/*
 #one_nav{
     
     margin: 0 auto;
@@ -128,14 +169,14 @@ header:hover{
     background-color:aqua;
    
 }
-*/
+
 #one_nav:hover{
     background-color:bisque;
     transition: background 2s;
 }
 
 
-/*
+
 .one_li{
     display:block;
     padding: 1px 5px 1px 5px;
@@ -170,7 +211,7 @@ header:hover{
     color: #fff;
     
 }
-*/
+
 .two_li{
     float: left;
     color: #F9F9F9;
@@ -178,9 +219,10 @@ header:hover{
     line-height: 30px;
     margin: 0 auto;
     background-color:#f42098;
-}
+
 
 }
+
 input{
     background-color: #6c5b79;
     padding: 0;
@@ -194,12 +236,14 @@ input{
     line-height: 35px;
     color: #fff;
 }
+*/
+
 
 /*[if lt lE9]*/
 <script src"http://html5shiv.googlecode.com/sun/trunk/html/5.js"></sript>
 
 
-/*
+
 @media only screen and (min-width:600px) and (max-width:920px){
     body{
         width:90%;
@@ -219,7 +263,7 @@ input{
         
         
     }
-}*/
+}
 
 /*CUSTOM, iphone Retina*/
 @media only screen and (min-width:320px){
