--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ header{
     
     margin:0 auto;
     float:left;
+    
 }
 
 #one_nav{
@@ -36,11 +37,12 @@ header{
     height: 180px;
 }
 
-
-
-
-
-
+.firstful > li >a{
+    
+    margin:0 auto;
+    display:inline-block;
+    background-color:aqua;
+}
 
 /*
 html, body{
