--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ header{
 }
 #one_nav > ul > li{
     
-    margin:0 auto;
+    margin:3px;
     display:inline-block;
     float:right;
         
@@ -59,6 +59,7 @@ header{
     
     margin:0 auto;
     text-align: center;
+    
 }
 
 /*
